--- a/SbzProfileSwitcherTray/SbzProfileSwitcherTray.csproj
+++ b/SbzProfileSwitcherTray/SbzProfileSwitcherTray.csproj
@@ -8,15 +8,16 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>SbzProfileSwitcherTray</RootNamespace>
     <AssemblyName>SbzProfileSwitcherTray</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>SbzProfileSwitcherTray.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
+    <OutputPath>C:\Program Files %28x86%29\Creative\Sound Blaster Z-Series\Sound Blaster Z-Series Control Panel\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
